--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=EurekaServerDemo
 
-serve.port=8761
+server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
